--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
     <body>
     <form method="POST">
     <input type="submit" name="submit_button" value="INSERT RECORD">
+    <input type="submit" name="submit_button" value="VIEW RECORD">
     <input type="submit" name="submit_button" value="VIEW ALL">
-        <input type="submit" name="submit_button" value="DELETE RECORD">
+    <input type="submit" name="submit_button" value="UPDATE RECORD">
+    <input type="submit" name="submit_button" value="DELETE RECORD">
     </form>
     </body>
 </html>
