--- a/templates/view.html
+++ b/templates/view.html
@@ -1,13 +1,13 @@
 <html>
     <body>
+    Here is a list of record names: <br><br><br>  {{nameList}} <br><br><br>
+
     <form method="POST">
     NAME:<br>
     <input type="text" name="name"><br>
-    NUMBER OF PARTS <br>
-    <input type="text" name="parts"><br>
-
-    <input type="submit" name="submit_button" value="INSERT RECORD">
+    <input type="submit" name="submit_button" value="VIEW RECORD">
     <input type="submit" name="submit_button" value="BACK">
     </form>
+
     </body>
 </html>
