no duplicate updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <input type="submit" name="submit_button" value="VIEW ALL">
     <input type="submit" name="submit_button" value="UPDATE RECORD">
     <input type="submit" name="submit_button" value="DELETE RECORD">
+    <input type="submit" name="submit_button" value="DELETE ALL">
     </form>
     </body>
 </html>
