Everything works except Update

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+
+    Here is a list of record names: <br><br><br>  {{nameList}} <br><br><br>
+
     <form method="POST">
     NAME:<br>
     <input type="text" name="name"><br>
